# docker-drones

./: .env  .env.example  .gitignore  DEPLOY_GUIDE.md  EVENTS.md  METRICS.md  README.md  USE.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
docs/: 00-introduccion.md  01-arquitectura-general.md  02-capa-edge.md  03-capa-mqtt.md  04-backend-rust.md  05-observabilidad.md  06-seguridad.md  07-despliegue-y-operacion.md  08-roadmap-tecnico.md  09-dashboard-control-plane.md  10-dashboard-data-plane.md  11-cli-observability-tool.md  12-system-governance.md  13-ml-analytics.md
docs/soc_integration/: 00-FLEET-DOCKER-ELK-INTEGRATION.md
edge/: Dockerfile
edge/mavlink_to_mqtt/: main.py
ml-analytics/: Makefile  README.md  main.py  requirements.txt
ml-analytics/config/: settings.py
ml-analytics/export/: prometheus_exporter.py
ml-analytics/inference/: state_mapper.py
ml-analytics/ingestion/: mqtt_consumer.py
ml-analytics/models/: anomaly_detector.py
ml-analytics/processing/: feature_extraction.py  windowing.py
mqtt/: mosquitto.conf
observability/: prometheus.yml
observability/grafana/dashboards/: drones-control-plane.json  drones-data-plane.json
observability/grafana/provisioning/dashboards/: dashboards.yml
tools/drone-observe/: go.mod  go.sum  main.go
tools/drone-observe/cmd/: drift.go  freshness.go  health.go  limits.go  llm.go  root.go  telemetry.go  topology.go  validate.go
tools/drone-observe/internal/audit/: drift.go  net.go
tools/drone-observe/internal/config/: config.go
(+15 files in other folders)
